# fantastic-recipe

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
backend/: reset_db.py
backend/app/: database.py  main.py
backend/models/: plan.py  recipe.py
doc/: requirements.md  ui.md
doc/ui/: dashboard.md  discovery.md  layout.md  planning.md  recipe_library.md  stats.md  style.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend-react/: package-lock.json  package.json  vite.config.js
frontend-react/public/: index.html
frontend-react/src/: App.jsx  index.css  main.jsx
frontend-react/src/components/: RecipeModal.jsx
frontend-react/src/services/: api.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: RecipeDetailDrawer.jsx  RecipeModal.jsx
frontend/src/components/ui/: dialog.jsx
frontend/src/layouts/: AppLayout.jsx
frontend/src/lib/: tagUtils.js
frontend/src/pages/: Dashboard.jsx  Discovery.jsx  Planning.jsx  RecipeLibrary.jsx  Stats.jsx
frontend/src/services/: api.js
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
